Fixed color contrast error on Contact Us page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -275,9 +275,10 @@ iframe {
 
 #employee-profiles {
     padding: 1rem;
-    background-color: var(--accent2-color);
+    background-color: var(--secondary-color);
     margin: 0.5em;
 }
+
 
 .employees {
     display: flex;
@@ -292,6 +293,10 @@ iframe {
     align-items: center;
 }
 
+.employee figcaption {
+    font-size: larger;
+}
+
 .form {
     background-color:#D4B483;
     margin: .5rem;
@@ -303,6 +308,7 @@ iframe {
 }
 
 .form h2 {
+    font-size: larger;
     text-align: center;
     padding: 20px;
 }
